tests/fail/if_then_else_type_mismatch.tig
if 1 then "abc" else 0
