tests/fail/if_then_else_type_mismatch.err
Semantic Error: The return type of the expressions of the if-then-else statement at line 1 is not the same.
